# Struktur-Data

./: CMakeLists.txt
01/: prak1a_2ks4_14.c  prak1b_2ks4_14.c  prak1c_2ks4_14.c
02/: Penugasan.docx  penugasan1.c  penugasan2.c  penugasan3.c  praktikum2A.c  praktikum2B.c  praktikum2C.c  praktikum2D.c  praktikum2E.c  praktikum2F.c  praktikum2G.c  praktikum2H.c  praktikum2I.c  praktikum2J.c  praktikum2K.c  praktikum2L.c  test.c
03/: Praktikum3_2KS4_14.docx  latihan3.c  penugasan2.c  penugasan3.c  penugasan4.c  praktikum3A.c  praktikum3B.c  praktikum3C.c  praktikum3D.c  praktikum3E.c  praktikum3F.c  praktikum3G.c  praktikum3H.c
04/: praktikum4.c
05/: praktikum5b_2KS4_222212596.c  tempCodeRunnerFile.c
06/: praktikum6a.c  praktikum6b_2KS4_222212596.c
07/: praktikum7a.c  praktikum7b.c  praktikum7c_2ks4_222212596.c  praktikum7d_2ks4_222212596.c  praktikum7e_2ks4_222212596.c  testo.c  testo0.c
08/: SD8 - Tree (Binary Tree & Binary Search Tree).pptx  ppt_binary tree.c  praktikum8B_2KS4_222212596.c
09/: Praktikum9B_2KS4_222212596.c  SD9 - Tree (m-way _ b-tree _ avl).pptx  avl_tree.c
Hangman/: buah.txt  hangman.c  hewan.txt  makanan.txt  negara.txt  perkakas.txt
Periksa/01/: prak1a_2KS3_222212605.c  prak1b_2KS3_222212605.c  prak1c_2KS3_222212605.c
Periksa/02/: praktikum2J.c  praktikum2L.c
