add_executable(new_target 05/praktikum5b_2KS4_222212596.c
        06/praktikum6b_2KS4_222212596.c
        07/praktikum7a.c
        07/praktikum7b.c
        07/praktikum7c_2ks4_222212596.c
        07/testo.c
        07/testo.c
        07/praktikum7e_2ks4_222212596.c
        07/testo0.c
        07/praktikum7d_2ks4_222212596.c
        "08/binary tree.c"
        "08/ppt_binary tree.c"
        09/avl_tree.c
        09/avl_tree.c
        09/avl_tree.c
        09/avl_tree.c
        09/avl_tree.c
        09/Praktikum9B_2KS4_222212596.c)
